--- a/_config.yml
+++ b/_config.yml
@@ -255,10 +255,10 @@ sidebar:
 
 index:
   showtag:
-  - 人生经验
-  - ICPC模板
-  - 水野爱
-
+#   - 人生经验
+#   - ICPC模板
+#   - 水野爱
+# 
 post:
   meta:
     enable: true
